--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,52 @@
+appdirs==1.4.3
 asgiref==3.2.5
+autopep8==1.4.4
+backcall==0.1.0
+certifi==2019.11.28
+chardet==3.0.4
+colorama==0.4.3
+decorator==4.4.2
 defusedxml==0.6.0
 diff-match-patch==20181111
+distlib==0.3.0
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==3.0.4
 django-bootstrap-form==3.4
 django-crispy-forms==1.9.0
+django-humanize==0.1.2
 django-import-export==2.0.2
+django-summernote==0.8.11.6
 et-xmlfile==1.0.1
+filelock==3.0.12
+humanize==1.0.0
+idna==2.9
+importlib-metadata==1.5.0
+ipython==7.14.0
+ipython-genutils==0.2.0
 jdcal==1.4.1
+jedi==0.17.0
 MarkupPy==1.14
 mysqlclient==1.4.6
 odfpy==1.4.1
 openpyxl==3.0.3
+parso==0.7.0
+pickleshare==0.7.5
+Pillow==7.0.0
+prompt-toolkit==3.0.5
+Pygments==2.6.1
 python-decouple==3.3
 pytz==2019.3
 PyYAML==5.3
+requests==2.23.0
+six==1.14.0
 sqlparse==0.3.1
 static3==0.7.0
 tablib==1.1.0
+traitlets==4.3.3
+urllib3==1.25.8
+virtualenv==20.0.10
+wcwidth==0.1.9
 xlrd==1.2.0
 xlwt==1.3.0
+zipp==3.1.0
